<resources>
    <string name="app_name">NaraeSFTP</string>
    <string name="add_connection">연결 추가</string>
    <string name="intro_desc">Simple, basic SFTP client for Android</string>
    <string name="connection_add_title">새로운 연결을 추가해보세요.</string>
    <string name="connection_add_item_title">연결 제목</string>
    <string name="connection_add_item_host">호스트 주소</string>
    <string name="connection_add_item_port">포트</string>
    <string name="connection_add_item_user">아이디</string>
    <string name="connection_add_item_password">비밀번호</string>
    <string name="connection_connecting">연결중입니다.\n잠시만 기다려주세요.</string>
    <string name="connection_fail_retry">연결에 실패하였습니다.\n다시 시도할까요?</string>
    <string name="connection_success_autoconnect">연결에 성공하였습니다!\n다음에도 이 정보로 연결할까요?</string>
    <string name="file_list_disconnected">연결이 끊어졌습니다. 연결 화면으로 이동합니다.</string>
    <string name="file_list_loading">파일 목록을 가져오고 있습니다.</string>
    <string name="menu_file_disconnect">연결 해제</string>
    <string name="file_list_logout">로그아웃 하시겠습니까?</string>
    <string name="file_list_double_back">한번 더 누르면 앱을 종료합니다.</string>
    <string name="file_list_confirm_dialog">%s 파일이 %s에 저장됩니다. \n 다운로드 하시겠습니까?</string>
    <string name="file_list_failed">파일 다운로드에 실패했습니다.</string>
    <string name="file_list_open">다운로드가 완료되었습니다. 바로 실행할까요?</string>
    <string name="file_list_downloading">파일 다운로드 중입니다.</string>
    <string name="file_list_market">열 수 있는 앱이 없어 마켓으로 이동합니다.</string>
    <string name="connection_edit_title">기존 연결 수정</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="connection_edit_initial_directory">기본 원격 폴더</string>
    <string name="connection_activity_long_click">길게 누르면 항목 수정이 가능합니다.</string>
    <string name="connection_edited">수정되었습니다.</string>
    <string name="connection_removed">삭제하였습니다.</string>
    <string name="request_package_message">보안상의 이유로 이 경로를 통한 알 수 없는 앱을 휴대전화에 설치할 수 없습니다.</string>
    <string name="request_package_positivie">설정</string>
    <string name="file_list_no_data">No Files Here!</string>
    <string name="file_list_disable_filter">필터를 설정하셨을 경우 작동을 해제해주세요.</string>
    <string name="file_create_directory">폴더 생성</string>
    <string name="upload_file">파일 업로드</string>
    <string name="submit">생성</string>
    <string name="file_created_directory">생성되었습니다.</string>
    <string name="local_file_confirm_upload">%s 파일이 %s에 저장됩니다. 업로드 하시겠습니까?</string>
    <string name="file_uploading">파일 업로드 중입니다.</string>
</resources>
