<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.windsekirun.naraesftp.local.LocalFileListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:actionSelected="@{viewModel::onMenuItemClick}"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/txtPath"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_f8"
            android:drawableStart="@drawable/ic_folder_other"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@{viewModel.path}"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="/home/pyxis/" />

        <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.hasData}"
            app:fastScrollAutoHide="true"
            app:fastScrollAutoHideDelay="1000"
            app:fastScrollPopupBgColor="@color/colorPrimary"
            app:fastScrollPopupTextColor="@color/white"
            app:items="@{viewModel.entries}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPath"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/file_list_item"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_document_file"
            android:visibility="@{!viewModel.hasData}"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/file_list_no_data"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{!viewModel.hasData}"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/file_list_disable_filter"
            android:visibility="@{!viewModel.hasData &amp;&amp; viewModel.filterEnable}"
            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:visibility="gone" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_btn"
            android:onClick="@{viewModel::clickFilterDisable}"
            android:src="@drawable/ic_close_white_24dp"
            android:visibility="@{!viewModel.hasData &amp;&amp; viewModel.filterEnable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>